increase allocated memory to WildFly instance for unit tests