@@ -193,7 +193,7 @@
               <!-- the maven dependency plugin will have already downloaded the server on /target -->
               <jboss.home>${project.basedir}/target/wildfly-8.1.0.Final</jboss.home>
               <module.path>${project.basedir}/target/wildfly-8.1.0.Final/modules</module.path>
-              <javaVmArguments>-Xmx512m -XX:MaxPermSize=128m</javaVmArguments>
+              <javaVmArguments>-Xms1024m -Xmx2048m -XX:PermSize=512M -XX:MaxPermSize=512 -XX:+CMSClassUnloadingEnabled</javaVmArguments>
               <arq.container.jboss.configuration.managementHost>${wildfly.host}</arq.container.jboss.configuration.managementHost>
               <arq.container.jboss.configuration.managementPort>29990</arq.container.jboss.configuration.managementPort>
               <org.jboss.as.client.connect.timeout>10000</org.jboss.as.client.connect.timeout>
